# apairo_extractor

./: .gitignore  README.md  pyproject.toml
apairo_extractor/: __init__.py  bag.py  cli.py  converters.py  export_mnt.py  extract.py  preprocess.py  resources.py  runner.py
apairo_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rosbag_extractor/: cli.py  converters.py  export_mnt.py  extract.py
rosbag_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_apairo_roundtrip.py  test_bag.py  test_cli_headless.py  test_converters.py  test_dataset_manifest.py  test_extract.py  test_resources.py  test_run_parallel.py  test_tf.py
