[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rosbag-extractor"
version = "0.1.0"
description = "Extract ROS bags to KITTI format with optional apairo preprocessing"
requires-python = ">=3.11"
dependencies = [
    "rosbags>=0.9.0",
    "numpy",
    "PyYAML",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "apairo",
]

[project.optional-dependencies]
mnt = ["zarr>=2.0", "Pillow"]

[project.scripts]
rosbag-extract = "rosbag_extractor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rosbag_extractor*"]
