[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apairo-extractor"
version = "0.1.0"
description = "Extract ROS bags to KITTI format with optional apairo preprocessing"
requires-python = ">=3.11"
dependencies = [
    "rosbags>=0.9.0",
    "numpy",
    "PyYAML",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    
    "apairo @ git+https://github.com/apairo-robotics/apairo.git",
]

[project.optional-dependencies]
mnt = ["zarr>=2.0", "Pillow"]
dev = ["pytest>=7.0", "Pillow"]

[project.scripts]
apairo-extractor = "apairo_extractor.cli:main"

# Ecosystem dispatch: enables `apairo extractor ...` via apairo's plugin
# discovery (apairo never depends on this package -- it finds it when installed).
[project.entry-points."apairo.cli_plugins"]
extractor = "apairo_extractor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["apairo_extractor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
